@@ -1,5 +1,9 @@
 About: A tool for making hypothetical tropical cyclone tracks (WIP)
 
+v20220207b:
+    + Selected tracks now include a selected dot
+        > New points added relative to the selected dot
+        > Dot must be selected to be moved
 v20220207a:
     + Added checkbox to toggle track point deletion mode
         > Keyboard shortcut: "q"
